# modl

./: .gitignore  Cargo.toml  README.md
notebooks/: advanced_features.py  correlations.ipynb  distributions.ipynb  eda.ipynb  execution_replay.ipynb  execution_replay_utils.py  fair_value.ipynb  feature_select.ipynb  features.ipynb  fill_model.ipynb  hedging.ipynb  hedging_tools.py  hmm_labeller.ipynb  inventory_quote_model.ipynb  paper_order_manager.py  paper_trade_recorder.py  paper_trading_recorder.ipynb  paper_trading_runtime.ipynb  quote_policy_optimizer.ipynb  recent_ws_files.ipynb  strategy_execution_replay.ipynb  targets.ipynb  viewer.ipynb
src/: lib.rs  main.rs  normalizer.rs
